Локальные шрифты, резиновость, иконка и мета теги

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="На сайте собраны многочисленные российские туристические места" />
+    <meta name="keywords" content="путешествие, путешествия, Россия, отдых, " />
+    <meta name="author" content="Алексей Кузнецов">
 
     <link rel="stylesheet" href="../styles/index.css">
+    <link rel="shortcut icon" href="../images/icon.svg" type="image/x-icon">
 
-    <title>Document</title>
+    <title>Путешествия по России</title>
 </head>
 <body class="page">
     <header class="header">
@@ -21,7 +25,7 @@
     <main>
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
-            <p class="lead__subtitle">Настоящая страна не в выпусках <br>новостей, а здесь.</p>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <img src="../images/lead__image.jpg" alt="Боковая полка плацкарт вагона" class="lead__image">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
