--- a/pages/index.html
+++ b/pages/index.html
@@ -148,7 +148,7 @@
             <li><a href="https://travel.yandex.ru" class="footer__link link" target="_blank">Путешествия</a></li>
         </ul>
 
-        <p class="footer__copyright">© 2023. Алексей Кузнецов</p>
+        <p class="footer__copyright">© 2023. <a href="https://t.me/kznv_alex" class="footer__author link">Алексей Кузнецов</a></p>
     </footer>
 
 </body>
