Исправления media запросов для соответствия макету

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="На сайте собраны многочисленные российские туристические места" />
-    <meta name="keywords" content="путешествие, путешествия, Россия, отдых, " />
+    <meta name="description" content="На сайте собраны многочисленные российские туристические места">
+    <meta name="keywords" content="путешествие, путешествия, Россия, отдых">
     <meta name="author" content="Алексей Кузнецов">
 
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../pages/index.css">
     <link rel="shortcut icon" href="../images/icon.svg" type="image/x-icon">
 
     <title>Путешествия по России</title>
@@ -130,8 +130,8 @@
             </article>
         </section>
 
-        <section>
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover" target="_blank">
+        <section class="cover" >
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 
