--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="keywords" content="путешествие, путешествия, Россия, отдых">
     <meta name="author" content="Алексей Кузнецов">
 
-    <link rel="stylesheet" href="../pages/index.css">
-    <link rel="shortcut icon" href="../images/icon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="shortcut icon" href="./images/icon.svg" type="image/x-icon">
 
     <title>Путешествия по России</title>
 </head>
 <body class="page">
     <header class="header">
-        <img src="../images/logo.svg" alt="Логотип проекта 'Путешествия по России'" class="header__logo">
+        <img src="./images/logo.svg" alt="Логотип проекта 'Путешествия по России'" class="header__logo">
         <div class="header__langs">
             <a class="header__lang-link header__lang-link_active link">Ru</a>
             <a class="header__lang-link link">En</a>
@@ -26,7 +26,7 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img src="../images/lead__image.jpg" alt="Боковая полка плацкарт вагона" class="lead__image">
+            <img src="./images/lead__image.jpg" alt="Боковая полка плацкарт вагона" class="lead__image">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
 
@@ -43,18 +43,18 @@
         </section>
 
         <section class="photo-grid" aria-label="Фотографии">
-            <img src="../images/__item-1.jpg" alt="Окно вагона поезда" class="photo-grid__item">
-            <img src="../images/__item-2.jpg" alt="Снежные горы в тумане" class="photo-grid__item">
-            <img src="../images/__item-3.jpg" alt="Собака, стоящая на стоге сена" class="photo-grid__item">
-            <img src="../images/__item-4.jpg" alt="Лес в тумане" class="photo-grid__item">
-            <img src="../images/__item-5.jpg" alt="Машина, стоящая на льду" class="photo-grid__item">
-            <img src="../images/__item-6.jpg" alt="Пляж" class="photo-grid__item">
-            <img src="../images/__item-7.jpg" alt="Снежные горы" class="photo-grid__item">
-            <img src="../images/__item-8.jpg" alt="Бетонные морские 'ежи'" class="photo-grid__item">
-            <img src="../images/__item-9.jpg" alt="Холмы в тумане" class="photo-grid__item">
-            <img src="../images/__item-10.jpg" alt="Гора" class="photo-grid__item">
-            <img src="../images/__item-11.jpg" alt="Скалы и пляж" class="photo-grid__item">
-            <img src="../images/__item-12.jpg" alt="Горы в тумане" class="photo-grid__item">
+            <img src="./images/__item-1.jpg" alt="Окно вагона поезда" class="photo-grid__item">
+            <img src="./images/__item-2.jpg" alt="Снежные горы в тумане" class="photo-grid__item">
+            <img src="./images/__item-3.jpg" alt="Собака, стоящая на стоге сена" class="photo-grid__item">
+            <img src="./images/__item-4.jpg" alt="Лес в тумане" class="photo-grid__item">
+            <img src="./images/__item-5.jpg" alt="Машина, стоящая на льду" class="photo-grid__item">
+            <img src="./images/__item-6.jpg" alt="Пляж" class="photo-grid__item">
+            <img src="./images/__item-7.jpg" alt="Снежные горы" class="photo-grid__item">
+            <img src="./images/__item-8.jpg" alt="Бетонные морские 'ежи'" class="photo-grid__item">
+            <img src="./images/__item-9.jpg" alt="Холмы в тумане" class="photo-grid__item">
+            <img src="./images/__item-10.jpg" alt="Гора" class="photo-grid__item">
+            <img src="./images/__item-11.jpg" alt="Скалы и пляж" class="photo-grid__item">
+            <img src="./images/__item-12.jpg" alt="Горы в тумане" class="photo-grid__item">
         </section>
 
         <section class="places" aria-label="Места для путешествия">
@@ -64,7 +64,7 @@
                     <p class="place__url-heading">URL</p>
                     <a href="http://park-kosa.ru" class="place__link link" target="_blank">park-kosa.ru</a>
                 </div>
-                <img src="../images/__image-4.jpg" alt="Корни деревьев на берегу моря" class="place__image">
+                <img src="./images/__image-4.jpg" alt="Корни деревьев на берегу моря" class="place__image">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                     <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -78,7 +78,7 @@
                     <p class="place__url-heading">URL</p>
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link link" target="_blank">National Geographic</a>
                 </div>
-                <img src="../images/__image-3.jpg" alt="Бушующее море на фоне снежных гор" class="place__image">
+                <img src="./images/__image-3.jpg" alt="Бушующее море на фоне снежных гор" class="place__image">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                     <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
@@ -93,7 +93,7 @@
                     <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link link" target="_blank">YouTube
                     </a>
                 </div>
-                <img src="../images/__image-2.jpg" alt="Ноутбук на фоне зеленого леса" class="place__image">
+                <img src="./images/__image-2.jpg" alt="Ноутбук на фоне зеленого леса" class="place__image">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -108,7 +108,7 @@
                     <p class="place__url-heading">URL</p>
                     <a href="https://vk.com/baikalmile" class="place__link link" target="_blank">https://vk.com/baikalmile</a>
                 </div>
-                <img src="../images/__image-1.jpg" alt="Потрескавшийся Байкальский лёд" class="place__image">
+                <img src="./images/__image-1.jpg" alt="Потрескавшийся Байкальский лёд" class="place__image">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                     <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -122,7 +122,7 @@
                     <p class="place__url-heading">URL</p>
                     <a href="http://vodlozero.ru" class="place__link link" target="_blank">http://vodlozero.ru/</a>
                 </div>
-                <img src="../images/__image.jpg" alt="Озеро на фоне покрытого лесом холма" class="place__image">
+                <img src="./images/__image.jpg" alt="Озеро на фоне покрытого лесом холма" class="place__image">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                     
