--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img src="./images/lead__image.jpg" alt="Боковая полка плацкарт вагона" class="lead__image">
-            <p class="lead__caption">ваша полка — верхняя</p>
+            <figure class="lead__image-wrapper">
+                <img src="./images/lead__image.jpg" alt="Боковая полка плацкарт вагона" class="lead__image">
+                <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+
+            </figure>
         </section>
 
         <section class="intro">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
+            <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
             <p class="intro__subtitle">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
                 <li class="intro__list-item"><span class="intro__bold-list-item">Часовых поясов</span> 11</li>
@@ -61,7 +64,7 @@
             <article class="places__place place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <span class="place__url-heading">url</span>
                     <a href="http://park-kosa.ru" class="place__link link" target="_blank">park-kosa.ru</a>
                 </div>
                 <img src="./images/__image-4.jpg" alt="Корни деревьев на берегу моря" class="place__image">
@@ -75,7 +78,7 @@
             <article class="places__place place">
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <span class="place__url-heading">url</span>
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link link" target="_blank">National Geographic</a>
                 </div>
                 <img src="./images/__image-3.jpg" alt="Бушующее море на фоне снежных гор" class="place__image">
@@ -89,7 +92,7 @@
             <article class="places__place place">
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <span class="place__url-heading">url</span>
                     <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link link" target="_blank">YouTube
                     </a>
                 </div>
@@ -105,7 +108,7 @@
             <article class="places__place place">
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <span class="place__url-heading">url</span>
                     <a href="https://vk.com/baikalmile" class="place__link link" target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <img src="./images/__image-1.jpg" alt="Потрескавшийся Байкальский лёд" class="place__image">
@@ -119,7 +122,7 @@
             <article class="places__place place">
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <span class="place__url-heading">url</span>
                     <a href="http://vodlozero.ru" class="place__link link" target="_blank">http://vodlozero.ru/</a>
                 </div>
                 <img src="./images/__image.jpg" alt="Озеро на фоне покрытого лесом холма" class="place__image">
@@ -132,7 +135,7 @@
 
         <section class="cover" >
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
+                <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 
             </a>
@@ -140,13 +143,16 @@
     </main>
 
     <footer class="footer">
-        <ul class="footer__links">
-            <li><a href="https://yandex.ru/maps" class="footer__link link" target="_blank">Карты</a></li>
-            <li><a href="https://yandex.ru/pogoda" class="footer__link link" target="_blank">Погода</a></li>
-            <li><a href="https://rasp.yandex.ru" class="footer__link link" target="_blank">Расписание</a></li>
-            <li><a href="https://calendar.yandex.ru" class="footer__link link" target="_blank">Календарь</a></li>
-            <li><a href="https://travel.yandex.ru" class="footer__link link" target="_blank">Путешествия</a></li>
-        </ul>
+        <nav>
+            <ul class="footer__links">
+                <li><a href="https://yandex.ru/maps" class="footer__link link" target="_blank">Карты</a></li>
+                <li><a href="https://yandex.ru/pogoda" class="footer__link link" target="_blank">Погода</a></li>
+                <li><a href="https://rasp.yandex.ru" class="footer__link link" target="_blank">Расписание</a></li>
+                <li><a href="https://calendar.yandex.ru" class="footer__link link" target="_blank">Календарь</a></li>
+                <li><a href="https://travel.yandex.ru" class="footer__link link" target="_blank">Путешествия</a></li>
+            </ul>
+
+        </nav>
 
         <p class="footer__copyright">© 2023. <a href="https://t.me/kznv_alex" class="footer__author link">Алексей Кузнецов</a></p>
     </footer>
