--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
         </section>
 
         <section class="photo-grid" aria-label="Фотографии">
-            <img src="./images/__item-1.jpg" alt="Окно вагона поезда" class="photo-grid__item">
-            <img src="./images/__item-2.jpg" alt="Снежные горы в тумане" class="photo-grid__item">
+            <img src="./images/__item-1.jpg" alt="Береговая линия в окне вагона поезда" class="photo-grid__item">
+            <img src="./images/__item-2.jpg" alt="Снежные горы в облаках" class="photo-grid__item">
             <img src="./images/__item-3.jpg" alt="Собака, стоящая на стоге сена" class="photo-grid__item">
             <img src="./images/__item-4.jpg" alt="Лес в тумане" class="photo-grid__item">
-            <img src="./images/__item-5.jpg" alt="Машина, стоящая на льду" class="photo-grid__item">
-            <img src="./images/__item-6.jpg" alt="Пляж" class="photo-grid__item">
-            <img src="./images/__item-7.jpg" alt="Снежные горы" class="photo-grid__item">
-            <img src="./images/__item-8.jpg" alt="Бетонные морские 'ежи'" class="photo-grid__item">
+            <img src="./images/__item-5.jpg" alt="Колесо машины, стоящей на толстом потрескавшемся льду" class="photo-grid__item">
+            <img src="./images/__item-6.jpg" alt="Пляж на фоне гор" class="photo-grid__item">
+            <img src="./images/__item-7.jpg" alt="Горы с заснеженными вершинами" class="photo-grid__item">
+            <img src="./images/__item-8.jpg" alt="Знак пешеходного перехода на фоне бетонных морских ежей" class="photo-grid__item">
             <img src="./images/__item-9.jpg" alt="Холмы в тумане" class="photo-grid__item">
-            <img src="./images/__item-10.jpg" alt="Гора" class="photo-grid__item">
-            <img src="./images/__item-11.jpg" alt="Скалы и пляж" class="photo-grid__item">
-            <img src="./images/__item-12.jpg" alt="Горы в тумане" class="photo-grid__item">
+            <img src="./images/__item-10.jpg" alt="Гора с заснеженной вершиной" class="photo-grid__item">
+            <img src="./images/__item-11.jpg" alt="Пляж, окруженный холмами" class="photo-grid__item">
+            <img src="./images/__item-12.jpg" alt="Горы в густом тумане" class="photo-grid__item">
         </section>
 
         <section class="places" aria-label="Места для путешествия">
@@ -111,7 +111,7 @@
                     <span class="place__url-heading">url</span>
                     <a href="https://vk.com/baikalmile" class="place__link link" target="_blank">https://vk.com/baikalmile</a>
                 </div>
-                <img src="./images/__image-1.jpg" alt="Потрескавшийся Байкальский лёд" class="place__image">
+                <img src="./images/__image-1.jpg" alt="Потрескавшийся байкальский лёд" class="place__image">
                 <div class="place__paragraphs">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                     <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
